@@ -12,7 +12,6 @@ import java.time.YearMonth;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class WeekendCalculator extends AbstractTimeWarningCalculationStrategy implements WarningCalculationStrategy<TimeWarning> {
     @Override
@@ -21,8 +20,8 @@ public class WeekendCalculator extends AbstractTimeWarningCalculationStrategy im
         if (projectTimeEntries.isEmpty()) {
             return warnings;
         } else {
-            int year = projectTimeEntries.get(0).getDate().getYear();
-            int month = projectTimeEntries.get(0).getDate().getMonth().getValue();
+            int year = projectTimeEntries.getFirst().getDate().getYear();
+            int month = projectTimeEntries.getFirst().getDate().getMonth().getValue();
 
             List<LocalDate> weekendDays = getWeekEndDaysOfMonth(year, month);
             projectTimeEntries.forEach(projectTimeEntry -> {
