@@ -56,8 +56,8 @@ public class TimeWarning implements ProjectEntryWarning {
         warnings = new ArrayList<>(newTimeWarning.warnings);
         warningTypes = new ArrayList<>(warningTypes);
 
-        if (!newTimeWarning.getWarningTypes().isEmpty() && !warningTypes.contains(newTimeWarning.getWarningTypes().get(0))) {
-            warningTypes.add(newTimeWarning.getWarningTypes().get(0));
+        if (!newTimeWarning.getWarningTypes().isEmpty() && !warningTypes.contains(newTimeWarning.getWarningTypes().getFirst())) {
+            warningTypes.add(newTimeWarning.getWarningTypes().getFirst());
         }
 
         if (newTimeWarning.missingBreakTime != null) {
