@@ -38,6 +38,7 @@ import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.lang3.tuple.Pair;
 import org.slf4j.Logger;
 
@@ -207,7 +208,7 @@ public class ManagementResourceImpl implements ManagementResource {
                     .toList());
 
             // it is guaranteed that the same Project instance is obtained for every ProjectEntry
-            Integer zepId = Optional.ofNullable(projectEntries.get(0))
+            Integer zepId = Optional.ofNullable(projectEntries.getFirst())
                     .map(ProjectEntry::getProject)
                     .map(com.gepardec.mega.db.entity.project.Project::getZepId)
                     .orElse(null);
@@ -291,7 +292,7 @@ public class ManagementResourceImpl implements ManagementResource {
         return projectEntries.stream()
                 .filter(p -> p.getStep() == projectStep)
                 .findFirst()
-                .orElseThrow(() -> new IllegalArgumentException(String.format("No project entry found for project step '%s'", projectStep)));
+                .orElseThrow(() -> new IllegalArgumentException("No project entry found for project step '%s'".formatted(projectStep)));
     }
 
     private Map<String, Employee> createEmployeeCache(YearMonth selectedYearMonth) {
@@ -353,7 +354,7 @@ public class ManagementResourceImpl implements ManagementResource {
 
             // used later on to compute the percentage of hours which were spent in this project (both billable and non-billable)
             List<com.gepardec.mega.domain.model.monthlyreport.ProjectEntry> projectEntriesForEmployee = zepRestService.getProjectTimes(employee, payrollMonth);
-            long totalWorkingHoursInMinutesForMonthAndEmployee = workingTimeUtil.getDurationFromTimeString(workingTimeUtil.getTotalWorkingTimeForEmployee(projectEntriesForEmployee, employee)).toMinutes();
+            long totalWorkingHoursInMinutesForMonthAndEmployee = workingTimeUtil.getDurationFromTimeString(workingTimeUtil.getTotalWorkingTimeForEmployee(projectEntriesForEmployee)).toMinutes();
 
             String billableTimeString = workingTimeUtil.getBillableTimesForEmployee(projectTime, employee);
             String nonBillableTimeString = workingTimeUtil.getInternalTimesForEmployee(projectTime, employee);
@@ -361,7 +362,7 @@ public class ManagementResourceImpl implements ManagementResource {
             long nonBillableTimeInMinutes = workingTimeUtil.getDurationFromTimeString(nonBillableTimeString).toMinutes();
 
             double percentageOfHoursSpentInThisProject = 0.0;
-            if (!(Double.compare(totalWorkingHoursInMinutesForMonthAndEmployee, 0.0d) == 0)) {
+            if (Double.compare(totalWorkingHoursInMinutesForMonthAndEmployee, 0.0d) != 0) {
                 percentageOfHoursSpentInThisProject = (double) (billableTimeInMinutes + nonBillableTimeInMinutes) / totalWorkingHoursInMinutesForMonthAndEmployee;
                 percentageOfHoursSpentInThisProject =
                         BigDecimal.valueOf(percentageOfHoursSpentInThisProject)
@@ -378,7 +379,7 @@ public class ManagementResourceImpl implements ManagementResource {
                     .employeeProgresses(pmProgressDtos)
                     .finishedComments(finishedAndTotalComments.getFinishedComments())
                     .totalComments(finishedAndTotalComments.getTotalComments())
-                    .entryDate(stepEntries.get(0).getDate().format(DateTimeFormatter.ofPattern(DATE_FORMAT_PATTERN)))
+                    .entryDate(stepEntries.getFirst().getDate().format(DateTimeFormatter.ofPattern(DATE_FORMAT_PATTERN)))
                     .billableTime(billableTimeString)
                     .nonBillableTime(nonBillableTimeString)
                     .percentageOfHoursSpentInThisProject(percentageOfHoursSpentInThisProject)
@@ -401,16 +402,12 @@ public class ManagementResourceImpl implements ManagementResource {
     }
 
     private State mapEmployeeStateToManagementState(EmployeeState employeeState) {
-        switch (employeeState) {
-            case DONE:
-                return State.DONE;
-            case OPEN:
-                return State.OPEN;
-            case IN_PROGRESS:
-                return State.IN_PROGRESS;
-            default:
-                return null;
-        }
+        return switch (employeeState) {
+            case DONE -> State.DONE;
+            case OPEN -> State.OPEN;
+            case IN_PROGRESS -> State.IN_PROGRESS;
+            default -> null;
+        };
     }
 
     private com.gepardec.mega.domain.model.State extractInternalCheckState(List<StepEntry> stepEntries) {
@@ -421,7 +418,7 @@ public class ManagementResourceImpl implements ManagementResource {
         boolean internalCheckStateOpen = stepEntries.stream()
                 .filter(stepEntry ->
                         StepName.CONTROL_INTERNAL_TIMES.name().equalsIgnoreCase(stepEntry.getStep().getName())
-                                && StringUtils.equalsIgnoreCase(
+                                && Strings.CS.equals(
                                 Objects.requireNonNull(userContext.getUser()).getEmail(),
                                 stepEntry.getAssignee().getEmail()
                         )
@@ -440,7 +437,7 @@ public class ManagementResourceImpl implements ManagementResource {
                         return StepName.CONTROL_TIME_EVIDENCES.name().equalsIgnoreCase(se.getStep().getName());
                     } else {
                         return StepName.CONTROL_TIME_EVIDENCES.name().equalsIgnoreCase(se.getStep().getName()) &&
-                                StringUtils.equalsIgnoreCase(se.getProject(), projectId);
+                                Strings.CS.equals(se.getProject(), projectId);
                     }
                 })
                 .map(StepEntry::getState)
