@@ -66,7 +66,7 @@ class ConstraintViolationExceptionMapperTest {
         List<ValidationViolation> actual = (List<ValidationViolation>) response.getEntity();
 
         assertThat(actual).hasSize(2);
-        assertThat(actual.get(0).getMessage()).isEqualTo(ValidationViolation.builder().property("name").message("must not be null").build().getMessage());
+        assertThat(actual.getFirst().getMessage()).isEqualTo(ValidationViolation.builder().property("name").message("must not be null").build().getMessage());
         assertThat(actual.get(1).getMessage()).isEqualTo(ValidationViolation.builder().property("email").message("must not be null").build().getMessage());
     }
 
