@@ -87,7 +87,7 @@ class SyncResourceTest {
                 .thenReturn(fehlzeitList);
 
 
-        when(zepService.getEmployee(eq(userUnderTest.getUserId())))
+        when(zepService.getEmployee(userUnderTest.getUserId()))
                 .thenReturn(userUnderTest);
 
         ArgumentCaptor<Employee> employeeArgumentCaptor = ArgumentCaptor.forClass(Employee.class);
@@ -111,7 +111,7 @@ class SyncResourceTest {
         assertThat(employeeArgumentCaptor.getValue()).isEqualTo(userUnderTest);
         assertThat(longArgumentCaptor.getValue()).isEqualTo(1L);
         assertThat(payrollMonthCaptor.getValue()).isEqualTo(previousMonth);
-        assertThat(actual.get(0).getUserId()).isEqualTo(userUnderTest.getUserId());
+        assertThat(actual.getFirst().getUserId()).isEqualTo(userUnderTest.getUserId());
     }
 
 
@@ -171,7 +171,7 @@ class SyncResourceTest {
                 .thenReturn(fehlzeitList);
 
 
-        when(zepService.getEmployee(eq(userUnderTest.getUserId())))
+        when(zepService.getEmployee(userUnderTest.getUserId()))
                 .thenReturn(createEmployeeForId("099-testUser", "test.user@gepardec.com", "2024-02-29"));
 
         List<EmployeeDto> actual = syncResource.updateEmployeesWithoutTimeBookingsAndAbsentWholeMonth();
@@ -206,7 +206,7 @@ class SyncResourceTest {
 
         doNothing().when(zepService).updateEmployeesReleaseDate(anyString(), anyString());
 
-        when(zepService.getEmployee(eq(userUnderTest.getUserId())))
+        when(zepService.getEmployee(userUnderTest.getUserId()))
                 .thenReturn(createEmployeeForId("e02-externalUser", "external.user@gepardec.com", "2024-02-29"));
 
         List<EmployeeDto> actual = syncResource.updateEmployeesWithoutTimeBookingsAndAbsentWholeMonth();
